enum EGamingDeviceType {
  k_EGamingDeviceType_Unknown = 0;
  k_EGamingDeviceType_StandardPC = 1;
  k_EGamingDeviceType_Console = 256;
  k_EGamingDeviceType_PS3 = 272;
  k_EGamingDeviceType_Steambox = 288;
  k_EGamingDeviceType_Handheld = 512;
  k_EGamingDeviceType_Phone = 528;
  k_EGamingDeviceType_SteamDeck = 544;
}

enum EOSType {
  k_eOSXboxOne = -800;
  k_eOSWebClient = -700;
  k_eOSEmbeddedClient = -675;
  k_eTVOSUnknown = -650;
  k_eTVOS9 = -649;
  k_eTVOS9_1 = -648;
  k_eTVOS9_2 = -647;
  k_eTVOS9_3 = -646;
  k_eTVOS10 = -645;
  k_eTVOS10_1 = -644;
  k_eTVOS10_2 = -643;
  k_eTVOS11 = -642;
  k_eTVOS11_1 = -641;
  k_eTVOS11_2 = -640;
  k_eTVOS11_3 = -639;
  k_eTVOS11_4 = -638;
  k_eTVOS12 = -637;
  k_eTVOS12_1 = -636;
  k_eIOSUnknown = -600;
  k_eIOS1 = -599;
  k_eIOS2 = -598;
  k_eIOS3 = -597;
  k_eIOS4 = -596;
  k_eIOS5 = -595;
  k_eIOS6 = -594;
  k_eIOS6_1 = -593;
  k_eIOS7 = -592;
  k_eIOS7_1 = -591;
  k_eIOS8 = -590;
  k_eIOS8_1 = -589;
  k_eIOS8_2 = -588;
  k_eIOS8_3 = -587;
  k_eIOS8_4 = -586;
  k_eIOS9 = -585;
  k_eIOS9_1 = -584;
  k_eIOS9_2 = -583;
  k_eIOS9_3 = -582;
  k_eIOS10 = -581;
  k_eIOS10_1 = -580;
  k_eIOS10_2 = -579;
  k_eIOS10_3 = -578;
  k_eIOS11 = -577;
  k_eIOS11_1 = -576;
  k_eIOS11_2 = -575;
  k_eIOS11_3 = -574;
  k_eIOS11_4 = -573;
  k_eIOS12 = -572;
  k_eIOS12_1 = -571;
  k_eIOSMax = -570;

  k_eAndroidUnknown = -500;
  k_eAndroid6 = -499;
  k_eAndroid7 = -498;
  k_eAndroid8 = -497;
  k_eAndroid9 = -496;
  k_eAndroidMax = -495;

  k_MacOSUnknown = -102;
  k_MacOS104 = -101;
  k_MacOS105 = -100;
  k_MacOS1058 = -99;
  k_MacOS106 = -95;
  k_MacOS1063 = -94;
  k_MacOS1064_slgu = -93;
  k_MacOS1067 = -92;
  k_MacOS107 = -90;
  k_MacOS108 = -89;
  k_MacOS109 = -88;
  k_MacOS1010 = -87;
  k_MacOS1011 = -86;
  k_MacOS1012 = -85;
  k_MacOS1013 = -84;
  k_MacOS1014 = -83;
  k_MacOS1015 = -82;
  k_MacOS1016 = -81;
  k_MacOS11 = -80;
  k_MacOS111 = -79;
  k_MacOS1017 = -78;
  k_MacOS12 = -77;
  k_MacOS13 = -76;
  k_MacOSMax = -1;

  k_LinuxUnknown = -203;
  k_Linux22 = -202;
  k_Linux24 = -201;
  k_Linux26 = -200;
  k_Linux32 = -199;
  k_Linux35 = -198;
  k_Linux36 = -197;
  k_Linux310 = -196;
  k_Linux316 = -195;
  k_Linux318 = -194;
  k_Linux3x = -193;
  k_Linux4x = -192;
  k_Linux41 = -191;
  k_Linux44 = -190;
  k_Linux49 = -189;
  k_Linux414 = -188;
  k_Linux419 = -187;
  k_Linux5x = -186;
  k_Linux54 = -185;
  k_Linux6x = -184;
  k_Linux7x = -183;
  k_Linux510 = -182;

  k_WinUnknown = 0;
  k_Win311 = 1;
  k_Win95 = 2;
  k_Win98 = 3;
  k_WinME = 4;
  k_WinNT = 5;
  k_Win2000 = 6;
  k_WinXP = 7;
  k_Win2003 = 8;
  k_WinVista = 9;
  k_Windows7 = 10;
  k_Win2008 = 11;
  k_Win2012 = 12;
  k_Windows8 = 13;
  k_Windows81 = 14;
  k_Win2012R2 = 15;
  k_Windows10 = 16;
  k_Win2016 = 17;
  k_Win2019 = 18;
  k_Win2022 = 19;
  k_Win11 = 20;
  k_WinMAX = 21;

  k_eOSTypeMax = 32;
}

enum EPlatformType {
  k_EPlatformTypeUnknown = 0;
  k_EPlatformTypeWin32 = 1;
  k_EPlatformTypeWin64 = 2;
  k_EPlatformTypek_Linux64 = 3;
  k_EPlatformTypeOSX = 4;
  k_EPlatformTypePS3 = 5;
  k_EPlatformTypek_Linux32 = 6;
  k_EPlatformTypeAndroid32 = 7;
  k_EPlatformTypeAndroid64 = 8;
  k_EPlatformTypeIOS32 = 9;
  k_EPlatformTypeIOS64 = 10;
  k_EPlatformTypeTVOS = 11;
  k_EPlatformTypeEmbeddedClient = 12;
  k_EPlatformTypeBrowser = 13;
  k_EPlatformTypeMax = 14;
}

enum EResult {
  Invalid = 0;

  OK = 1;
  Fail = 2;
  NoConnection = 3;
  InvalidPassword = 5;
  LoggedInElsewhere = 6;
  InvalidProtocolVer = 7;
  InvalidParam = 8;
  FileNotFound = 9;
  Busy = 10;
  InvalidState = 11;
  InvalidName = 12;
  InvalidEmail = 13;
  DuplicateName = 14;
  AccessDenied = 15;
  Timeout = 16;
  Banned = 17;
  AccountNotFound = 18;
  InvalidSteamID = 19;
  ServiceUnavailable = 20;
  NotLoggedOn = 21;
  Pending = 22;
  EncryptionFailure = 23;
  InsufficientPrivilege = 24;
  LimitExceeded = 25;
  Revoked = 26;
  Expired = 27;
  AlreadyRedeemed = 28;
  DuplicateRequest = 29;
  AlreadyOwned = 30;
  IPNotFound = 31;
  PersistFailed = 32;
  LockingFailed = 33;
  LogonSessionReplaced = 34;
  ConnectFailed = 35;
  HandshakeFailed = 36;
  IOFailure = 37;
  RemoteDisconnect = 38;
  ShoppingCartNotFound = 39;
  Blocked = 40;
  Ignored = 41;
  NoMatch = 42;
  AccountDisabled = 43;
  ServiceReadOnly = 44;
  AccountNotFeatured = 45;
  AdministratorOK = 46;
  ContentVersion = 47;
  TryAnotherCM = 48;
  PasswordRequiredToKickSession = 49;
  AlreadyLoggedInElsewhere = 50;
  Suspended = 51;
  Cancelled = 52;
  DataCorruption = 53;
  DiskFull = 54;
  RemoteCallFailed = 55;
  PasswordUnset = 56;
  ExternalAccountUnlinked = 57;
  PSNTicketInvalid = 58;
  ExternalAccountAlreadyLinked = 59;
  RemoteFileConflict = 60;
  IllegalPassword = 61;
  SameAsPreviousValue = 62;
  AccountLogonDenied = 63;
  CannotUseOldPassword = 64;
  InvalidLoginAuthCode = 65;
  AccountLogonDeniedNoMail = 66;
  HardwareNotCapableOfIPT = 67;
  IPTInitError = 68;
  ParentalControlRestricted = 69;
  FacebookQueryError = 70;
  ExpiredLoginAuthCode = 71;
  IPLoginRestrictionFailed = 72;
  AccountLockedDown = 73;
  AccountLogonDeniedVerifiedEmailRequired = 74;
  NoMatchingURL = 75;
  BadResponse = 76;
  RequirePasswordReEntry = 77;
  ValueOutOfRange = 78;
  UnexpectedError = 79;
  Disabled = 80;
  InvalidCEGSubmission = 81;
  RestrictedDevice = 82;
  RegionLocked = 83;
  RateLimitExceeded = 84;
  AccountLoginDeniedNeedTwoFactor = 85;
  ItemDeleted = 86;
  AccountLoginDeniedThrottle = 87;
  TwoFactorCodeMismatch = 88;
  TwoFactorActivationCodeMismatch = 89;
  AccountAssociatedToMultiplePartners = 90;
  NotModified = 91;
  NoMobileDevice = 92;
  TimeNotSynced = 93;
  SMSCodeFailed = 94;
  AccountLimitExceeded = 95;
  AccountActivityLimitExceeded = 96;
  PhoneActivityLimitExceeded = 97;
  RefundToWallet = 98;
  EmailSendFailure = 99;
  NotSettled = 100;
  NeedCaptcha = 101;
  GSLTDenied = 102;
  GSOwnerDenied = 103;
  InvalidItemType = 104;
  IPBanned = 105;
  GSLTExpired = 106;
  InsufficientFunds = 107;
  TooManyPending = 108;
  NoSiteLicensesFound = 109;
  WGNetworkSendExceeded = 110;
  AccountNotFriends = 111;
  LimitedUserAccount = 112;
  CantRemoveItem = 113;
  AccountDeleted = 114;
  ExistingUserCancelledLicense = 115;
  CommunityCooldown = 116;
  NoLauncherSpecified = 117;
  MustAgreeToSSA = 118;
  LauncherMigrated = 119;
  SteamRealmMismatch = 120;
  InvalidSignature = 121;
  ParseFailure = 122;
  NoVerifiedPhone = 123;
  InsufficientBattery = 124;
  ChargerRequired = 125;
  CachedCredentialInvalid = 126;
  PhoneNumberIsVOIP = 127;
};